--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@ layout: default
 ---
 
 <div id="home">
+  <h1>Pages</h1>
+	<ul class="posts">
+
+{% assign pages_list = site.pages %}
+{% for node in pages_list %}
+  {% if node.title != null %}
+    {% if node.layout == "page" %}
+      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a></li>
+    {% endif %}
+  {% endif %}
+{% endfor %}
+	</ul>
+
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
