--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 permalink: 404.html
+nav: exclude
 ---
 <!----------------------------------------------------------------
      _ _           _ _          
