--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 ---
+title: "Dr Mikes Tips"
 layout: page
 tagline:
+nav: exclude
 ---
+
+<p>Some notes on using <b>Jekyll</b> to create static websites...</p>
+
+
+<ul class="posts">
+
+{% assign pages_list = site.pages %}
+{% for node in pages_list %}
+  {% if node.title != null %}
+    {% if node.nav != "exclude" %}
+      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a></li>
+    {% endif %}
+  {% endif %}
+{% endfor %}
+</ul>
+
+
+
 
 {% for post in paginator.posts %}
 
@@ -39,8 +59,10 @@ tagline:
 
 </article>
 {% endfor %}
-<hr/>
 
+
+<!--
+<hr/>
 <ul class="pager"> 
 
   {% if paginator.previous_page %}
@@ -72,3 +94,4 @@ tagline:
   {% endif %}
 
 </ul>
+-->
