ADD markdown, finish basics

--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 layout: page
 permalink: 404.html
 nav: exclude
+title: Page not found
 ---
 <!----------------------------------------------------------------
      _ _           _ _          
